Scrollbar scroll fix

--- a/site/_style/partial/_scroll.scss
+++ b/site/_style/partial/_scroll.scss
@@ -1,19 +1,22 @@
 %scrollbar
 {
+    -webkit-overflow-scrolling: auto !important;
+
     &::-webkit-scrollbar
     {
-        height: 5px;
-        width: 5px;
+        -webkit-overflow-scrolling: auto !important;
+        height: 5px !important;
+        width: 5px !important;
     }
 
     &::-webkit-scrollbar-thumb
     {
-        background: var(--c_scrollbar);
+        background: var(--c_scrollbar) !important;
         //&:hover { background: var(--c_bg-shade-4); }
     }
 
     &::-webkit-scrollbar-corner
     {
-        background: var(--c_border);
+        background: var(--c_border) !important;
     }
 }
